# Quant_Sev

./: .gitignore  CMakeLists.txt  Quant_Sev_Sod.md  Readme.md  frame.md  plan.md
BLL/: Readme.md
BLL/Backtest/: BacktestEngine.cpp  BacktestEngine.hpp  BacktestProgress.hpp  BacktestTypes.hpp  MatchEngine.cpp  MatchEngine.hpp  TickBarSynthesizer.cpp  TickBarSynthesizer.hpp
BLL/Bar/: BarEngine.cpp  BarEngine.hpp  BarPeriod.cpp  BarPeriod.hpp
BLL/Common/: ContractRules.cpp  ContractRules.hpp  OptionRules.cpp  OptionRules.hpp
BLL/Indicator/: IndicatorCompute.cpp  IndicatorCompute.hpp  IndicatorEngine.cpp  IndicatorEngine.hpp  IndicatorTypes.hpp  Readme.md
BLL/Indicator/tulipindicators/: tiamalgamation.c
BLL/OrderBook/: OrderBookEngine.cpp  OrderBookEngine.hpp
BLL/Rollover/: RolloverEngine.cpp  RolloverEngine.hpp
BLL/Storage/: StorageEngine.cpp  StorageEngine.hpp  StorageTypes.hpp
BLL/Strategy/: StrategyEngine.cpp  StrategyEngine.hpp  StrategyRuntime.cpp  StrategyRuntime.hpp  StrategyTypes.hpp
BLL/Strategy/C_Strategy/: Boll.cpp  DoubleEma.cpp  DualThrust.cpp  MaCross.cpp  Macd.cpp
BLL/Strategy/P_Strategy/: README.md
CTP/: README.md  ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
CTP/lib/: README.md
Core/: Readme.md
Core/Account/: AccountRecord.cpp  AccountRecord.hpp  AccountService.cpp  AccountService.hpp
Core/CTA/: CtaEngine.cpp  CtaEngine.hpp  CtaTypes.hpp
Core/Common/: ConnectResult.hpp  CtpUtil.hpp  JsonQuery.hpp
Core/Config/: Config.cpp  Config.hpp
Core/Gateway/: Gateway.cpp  Gateway.hpp
Core/Logger/: Logger.cpp  Logger.hpp
Core/Quote/: QuoteEngine.cpp  QuoteEngine.hpp
Core/Risk/: RiskEngine.cpp  RiskEngine.hpp  RiskTypes.hpp
Core/Symbol/: SymbolService.cpp  SymbolService.hpp
Core/TimeCheck/: TimeCheckEngine.cpp  TimeCheckEngine.hpp  TimeCheckTypes.hpp
Core/Trade/: OrderTypes.hpp  TradeEngine.cpp  TradeEngine.hpp
Host/: Readme.md  main.cpp
Host/WebSocketServer/: TickWsServer.cpp  TickWsServer.hpp  WsUtil.cpp  WsUtil.hpp
Web/: AI_Strategy_ui.html  Account_ui.html  Backtest_Bridge.js  Backtest_ui.html  Data_Bridge.js  Data_ui.html  Editor_ui.html  FollowTrade_ui.html  Logger.html  Mainwindow.css  Mainwindow.html  Readme.md  Risk_ui.html  Settings_ui.html  Strategies_Bridge.js  Strategies_ui.html  TradeView_Bridge.js  Trade_ui.html  common.css  cta_Bridge.js  diagnostic_Bridge.js  logger_Bridge.js  logger_embed.css  orderbook_Bridge.js  risk_Bridge.js  rollover_Bridge.js  tick_Bridge.js  trade_Bridge.js  trade_ui_Bridge.js
Web/Backtest/: Optimize.html  Run.html  backtest.css
Web/icons/: ICONS_MAP.md  README.md
Web/trade/: Chart_Axis.js  Chip_Chart.js  DOM_Panel.html  DOM_Panel.js  Indicator_Catalog.js  Indicator_Chart.js  Market_Chart.css  Market_Chart.html  Market_Chart.js  Market_Chart_App.js  Position_Panel.html  Position_Panel.js  Readme.md  Trade_Query.html  Trade_control.html
config/: Account.json.example  Contract_Rules.json  Option_Rules.json  Risk.json  Strategy_list.json  Symbol_list.json  app.json
scripts/: build.ps1  enrich-config.mjs  package.ps1
